Misleading error message for missing collection in $geoNear

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      https://github.com/10gen/mongo/blob/master/src/mongo/db/pipeline/pipeline_d.cpp#L1873-L1876 has an error message related to a missing index but the assertion is checking that the main collection exists. We should change the message to reflect what the error actually is.

            Assignee:
            Mariano Shaar
            Reporter:
            Mariano Shaar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: