SERVER-112535 Change misleading error message for missing collection in $geoNear (#43486)

GitOrigin-RevId: ef9fc0cf2d6751c7068fa7a49e8352c1a7d1c26f